<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_bg"
    android:padding="16dp"
    android:layout_marginBottom="12dp">

    <TextView
        android:id="@+id/text_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/button_orange" />

    <TextView
        android:id="@+id/text_current_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_manager_placeholder"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Spinner
            android:id="@+id/spinner_managers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_input_background"
            android:paddingHorizontal="6dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:backgroundTint="@color/button_orange"
            android:textColor="@android:color/white"
            android:paddingHorizontal="18dp"/>
    </LinearLayout>
</LinearLayout>
